prepare Tracy 0.1.0 release
